# PythonKorAPClient

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE.txt  Readme.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
KorAPClient/: __init__.py  __main__.py  index.html
KorAPClient/tests/: test_korapclient.py
ci/: Makevars  install-rkorapclient-ci.yml
doc/KorAPClient/: index.html
examples/: collocates.py  example_flexiconc.ipynb  hello_world.py  hello_world_interactive.py  useFlexiconc.py  variant_by_country_interactive_barchart.py  writtenVSspoken.py
figures/: hello_world.html
html/KorAPClient/: index.html
scripts/: R_run.bat  run_tests.sh
